# plats-octopus

./: .gitignore  README.md
docs/: function-spec.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/task/: Cargo.toml
pallets/task/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
resources/: octopus-testnet.json  plats-network-testnet-raw.json  plats-network-testnet.json  testnet.json
runtime/: Cargo.toml
runtime/src/: lib.rs
tests/test-js/: account.js  task.js
